# my-rust-template

./: Cargo.toml  clippy.toml  prek.toml  rustfmt.toml
.github/workflows/: ci.yml
